# vllm

./: .ansible-lint  .gitignore  ARCHITECTURE.md  README.md  benchmarkings.md  commands.md
.claude/: settings.json
.github/workflows/: ansible.yml
ansible/: ansible.cfg  cluster.yml  inventory_plugin.py  jenkins-ios-setup.yml  llm-frameworks.yml  mac-monitoring.yml  requirements.yml  salt-onboarding.yml  site.yml
ansible/group_vars/: all.yml
ansible/tests/: test_inventory_parity.py  test_inventory_plugin.py  test_llm_discovery_logic.py
apple-silicon-monitoring/: .gitignore  capture_svg.py  docker-compose.yaml  hydra_dashboard_verification.md  hydra_monitoring.md  test-setup.sh
apple-silicon-monitoring/alerts/: alertmanager.yaml  apple-silicon-hardware.yaml  hallucination-detection.yaml  llm-inference.yaml  sglang-inference.yaml
apple-silicon-monitoring/apple-silicon-exporter/: Makefile  go.mod  go.sum  hydra_exporter.md
apple-silicon-monitoring/dashboards/: fleet-overview.json  node-deep-dive.json  quality-monitor.json
apple-silicon-monitoring/docker/: hydra_docker.md  otel-agent-config.yaml  otel-gateway-config-20nodes.yaml  otel-gateway-config.yaml
apple-silicon-monitoring/llm-telemetry/python/: hydra_telemetry.md  pyproject.toml
apple-silicon-monitoring/llm-telemetry/python/llm_telemetry/: __init__.py  detection.py  metrics.py  telemetry.py
apple-silicon-monitoring/otel-config/: agent-config-prometheus-mode.yaml  agent-config.yaml  agent.env  gateway-config.yaml  gateway.env
apple-silicon-monitoring/scripts/: patch_dashboards.py
apple-silicon-monitoring/tests/: test_dashboard_patches.py
bitnet/: README.md
docs/: adr-llm-d-integration.md  ansible-provisioning-strategy.md  hybrid-cluster-architecture.md  hydra_architecture.md  hydra_exporter.html  mlx-node-onboarding.md  network-design.md  observability-review-tickets.html  observability-review-tickets.md
docs/mac-mini-cluster/: architecture-decision-document.md  hydra-pilot-architecture.md
monitoring/: .env  README.md  docker-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/images/: .gitignore
monitoring/loki/: loki-config.yml
monitoring/otel-agent-linux/: install.sh  otel-agent-config.yaml  otelcol-agent.service
monitoring/otel-collector/: otel-gateway-config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/scripts/: load-images.sh  pull-images.sh  verify-stack.sh
monitoring/tempo/: tempo-config.yml
results/: i7-rtx3050_8b_llamacpp_20260428_131002.txt
salt/: README.md  Saltfile  master  roster
salt/pillar/: llm.sls  top.sls
salt/states/: top.sls
scripts/: ingest_results.py
vllm/: README.md  vllm.code-workspace
(+328 files in other folders)
